# pra-lang

./: Cargo.toml  README.md  program.srs  program2.srs
example_programs/: fibonaci.srs  fizzbuzz.srs
src/: ast.rs  bin.rs  buildin.rs  calculator1.lalrpop  calculator1.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop
